# tppsss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.bat  documentation.txt  main.cpp
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dependabot.yml
.github/workflows/: cmakeMSYS2.yml  cmakeNative.yml  deleteWorkflows.yml  runExample.yml
controlTheory/: CMakeLists.txt  controlTheory.cpp  controlTheory.h
data/: SCMData.csv  marketData.csv  trackList.txt
data/steamData/: 7302020%20RMR%20Challengers.csv  7302020%20RMR%20Contenders.csv  7302020%20RMR%20Legends.csv  730AK-47%20%7C%20Redline%20%28Field-Tested%29.csv  730Berlin%202019%20Minor%20Challengers%20Autograph%20Capsule.csv  730Dreams%20%26%20Nightmares%20Case.csv  730Operation%20Vanguard%20Weapon%20Case.csv  730Prisma%202%20Case.csv  730SSG%2008%20%7C%20Abyss%20%28Minimal%20Wear%29.csv  730Shattered%20Web%20Case.csv  730Snakebite%20Case.csv  730Stockholm%202021%20Legends%20Sticker%20Capsule.csv  730eSports%202014%20Summer%20Case.csv
scripts/: bootstrap.ps1  buildDepsCMakeLists.txt  exampleExpect.lua  exampleExpect.sh  exampleExpect.tcl  exampleExpectLua.bat  exampleExpectLua.ps1
src/: main.cpp
src/include/: CMakeLists.txt  SCM.cpp  SCM.h  controlTheory.cpp  controlTheory.h  stocks.cpp  stocks.h
webScraper/: CMakeLists.txt  webScraper.cpp  webScraper.h
